# crace-razy

./: .travis.yml  CMakeLists.txt  README.md  earth.cpp  earth.hpp  exception.cpp  exception.hpp  game.cpp  game.hpp  line.cpp  line.hpp  main.cpp  object.cpp  object.hpp  sdl.cpp  sdl.hpp  track.cpp  track.hpp  vector.cpp  vector.hpp  vertex.cpp  vertex.hpp
allegro/: color.cpp  color.hpp  event.cpp  event.hpp  line.cpp  line.hpp  polygon.cpp  polygon.hpp  vector.cpp  vector.hpp  vertex.cpp  vertex.hpp
app/: CMakeLists.txt  main.cpp
cmake/: use_cxx11.cmake
common/: CMakeLists.txt  algorithm.cpp  array_matrix.cpp  block.cpp  matrix.cpp  sdl.hpp  vector_matrix.cpp
core/: CMakeLists.txt  block.cpp  block_factory.cpp  logic.cpp  piece.cpp
core/include/lozti/core/: array_matrix.hpp  block.hpp  block_data.hpp  block_factory.hpp  board.hpp  logic.hpp  point.hpp  types.hpp  vector_matrix.hpp
core/src/: CMakeLists.txt  algorithm.cpp  array_matrix.cpp  block.cpp  block_data.cpp  block_factory.cpp  board.cpp  logic.cpp  piece.cpp  point.cpp  vector_matrix.cpp
core/test/: CMakeLists.txt  algorithm.cpp  array_matrix.cpp  block.cpp  block_factory.cpp  board.cpp  logic.cpp  piece.cpp  point.cpp  vector_matrix.cpp
include/lozti/: algorithm.hpp  array_matrix.hpp  block.hpp  block_factory.hpp  logic.hpp  matrix.hpp  piece.hpp  vector_matrix.hpp
sdl/: error.hpp  exception.hpp  img.cpp  img.hpp  types.hpp
sdl/img/: error.cpp  error.hpp
src/: main.cpp  sdl.cpp
src/sdl/: error.cpp  exception.cpp
test/: CMakeLists.txt  algorithm.cpp  array_matrix.cpp  block.cpp  block_factory.cpp  logic.cpp  main.cpp  matrix.cpp  piece.cpp  vector_matrix.cpp
